--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p class="subtitle">{{ page.date | date: "%B %-d, %Y" }}</p>
+<h1>{{ page.title | remove: '<p>' | remove: '</p>' }}</h1>
+<p class="subtitle">{{ page.date | date: "%B %-d, %Y" | remove: '<p>' | remove: '</p>' }}</p>
 
 
 <script type="text/x-mathjax-config">
