--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -146,7 +146,10 @@ figure.fullwidth figcaption {
     margin-left: 36%;
 }
 
-img { max-width: 100%; }
+img { max-width: 100%; 
+      display: block;
+      margin-left: auto;
+      margin-right: auto;}
 
 .sidenote, .marginnote {
     // goal: width = 50% of <p> (= 27.5% of 87.5% <body>)
